--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
   },
   "homepage": "https://github.com/anneozolin/cse341-project2#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongodb": "^6.1.0",
+    "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
     "swagger-autogen": "^2.23.6",
     "swagger-ui-express": "^5.0.0"
   }
